Antes de vazar imagem entre 2 bg

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Bikcraft</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,9 +11,33 @@
 </head>
 <body>
 
-    <header>
-
+   
+    <header class="header">
+        <div class="header-container">
+            <img src="./img/bikcraft.svg" alt="">
+            <nav >
+                <ul class="header-nav">
+                    <li><a href="">Bicicletas</a></li>
+                    <li><a href="">Seguros</a></li>
+                    <li><a href="">Contato</a></li>
+                </ul>
+            </nav>
+       </div>
     </header>
+
+
+    <main class="main">
+        <div class="main-container">
+            <div>
+                <h1>Bicicletas feitas
+                sob medida<span class="ponto-decorativo">.</span>
+                </h1>
+                <p class="main-texto">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+                <span class="button">Selecione a sua</span>
+            </div>
+            <img src="./img/fotos/introducao.jpg" alt="">
+        </div>
+    </main>
     
 </body>
 </html>
