--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,20 +10,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-   
+
     <header class="header">
         <div class="header-container">
-            <img src="./img/bikcraft.svg" alt="">
-            <nav >
+            <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
+            <nav>
                 <ul class="header-nav">
                     <li><a href="">Bicicletas</a></li>
                     <li><a href="">Seguros</a></li>
                     <li><a href="">Contato</a></li>
                 </ul>
             </nav>
-       </div>
+        </div>
     </header>
 
 
@@ -30,14 +32,15 @@
         <div class="main-container">
             <div>
                 <h1>Bicicletas feitas
-                sob medida<span class="ponto-decorativo">.</span>
+                    sob medida<span class="ponto-decorativo">.</span>
                 </h1>
-                <p class="main-texto">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+                <p class="main-texto">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
                 <span class="button">Selecione a sua</span>
             </div>
             <img src="./img/fotos/introducao.jpg" alt="">
         </div>
     </main>
-    
+
 </body>
+
 </html>
