--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
                     sob medida<span class="ponto-decorativo">.</span>
                 </h1>
                 <p class="main-texto">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-                <span class="button">Selecione a sua</span>
+                <a href="" class="button">Selecione a sua</a>
             </div>
-            <img src="./img/fotos/introducao.jpg" alt="">
+            <div>
+                <img src="./img/fotos/introducao.jpg" alt="">
+            </div>
         </div>
     </main>
 
