--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <header class="header">
-        <div class="header-container">
+        <div class="header-container container">
             <a href="./"><img src="./img/bikcraft.svg" alt=""></a>
             <nav>
                 <ul class="header-nav">
@@ -29,7 +29,7 @@
 
 
     <main class="main">
-        <div class="main-container">
+        <div class="main-container container">
             <div>
                 <h1>Bicicletas feitas
                     sob medida<span class="ponto-decorativo">.</span>
@@ -37,11 +37,38 @@
                 <p class="main-texto">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
                 <a href="" class="button">Selecione a sua</a>
             </div>
-            <div>
+            <div class="main-img">
                 <img src="./img/fotos/introducao.jpg" alt="">
             </div>
         </div>
     </main>
+
+    <section class="galeria container">
+        <h2>escolha a sua<span class="ponto-decorativo">.</span></h2>
+        <div class="galeria-fotos">
+            <div class="galeria-item">
+                <a href="">
+                    <img src="./img/bicicletas/magic-home.jpg" alt="">
+                    <h3>Magic Might</h3>
+                    <span>R$ 2499</span>
+                </a>
+            </div>
+            <div class="galeria-item">
+                <a href="">
+                    <img src="./img/bicicletas/nimbus-home.jpg" alt="">
+                    <h3>Nimbus Stark</h3>
+                    <span>R$ 4999</span>
+                </a>
+            </div>
+            <div class="galeria-item">
+                <a href="">
+                    <img src="./img/bicicletas/nebula-home.jpg" alt="">
+                    <h3>Nebula Cosmic</h3>
+                    <span>R$ 3999</span>
+                </a>
+            </div>
+        </div>
+    </section>
 
 </body>
 
