--- a/index.html
+++ b/index.html
@@ -70,6 +70,27 @@
         </div>
     </section>
 
+    <article class="seguro-bg">
+        <div class="seguro">
+            <div>
+                <span class="c5 font-roboto-l-b">Tecnologia Avançada</span>
+                <h2 class="font-xxl w">você escolhe as suas cores e componentes<span class="ponto-decorativo">.</span>
+                </h2>
+                <p class="font-roboto-l">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+                <a href="" class="link">ESCOLHA UM MODELO</a>
+                <img src="" alt="">
+                <span>Motor Elétrico</span>
+                <p>Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+                <img src="" alt="">
+                <span>Rastreador</span>
+                <p>Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+            </div>
+            <div>
+                <img src="./img/fotos/tecnologia.jpg" alt="">
+            </div>
+        </div>
+    </article>
+
 </body>
 
 </html>
