--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         </div>
     </section>
 
-    <article class="seguro-bg ">
-        <div class="seguro container ">
+    <article class="seguro-bg">
+        <div class="seguro container">
             <div class="seguro-conteudo">
                 <span class="c5 font-roboto-l-b seguro-subtitulo">Tecnologia Avançada</span>
                 <h2 class="font-xxl w seguro-titulo">você escolhe as suas cores e componentes<span class="ponto-decorativo">.</span>
@@ -91,11 +91,29 @@
                     </div>
                 </div>
             </div>
-            <div class="img">
+            <div class="seguro-img">
                 <img src="./img/fotos/tecnologia.jpg" alt="">
             </div>
         </div>
     </article>
+
+    <section class="parceiros container">
+        <h2 class="font-xxl c11 parceiros-titulo">nossos parceiros<span class="ponto-decorativo">.</span>
+        <div>
+            <ul class="parceiros-lista">
+                <li><img src="img/parceiros/caravan.svg" alt=""></li>
+                <li><img src="img/parceiros/ranek.svg" alt=""></li>
+                <li><img src="img/parceiros/handel.svg" alt=""></li>
+                <li><img src="img/parceiros/dogs.svg" alt=""></li>
+                <li><img src="img/parceiros/lescone.svg" alt=""></li>
+                <li><img src="img/parceiros/flexblog.svg" alt=""></li>
+                <li><img src="img/parceiros/wildbeast.svg" alt=""></li>
+                <li><img src="img/parceiros/surfbot.svg" alt=""></li>
+            </ul>
+        </div>
+
+        
+    </section>
 
 </body>
 
